--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.18.0",
     "firebaseui": "^4.6.1",
+    "mdbvue": "^6.7.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
