--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "date-fns": "^2.15.0",
     "firebase": "^7.18.0",
     "firebaseui": "^4.6.1",
     "mdbvue": "^6.7.1",
