--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vue-cli-plugin-pug": "~1.0.7",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "vuex-module-decorators": "^0.17.0"
   }
 }
