--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.15.0",
     "firebase": "^7.18.0",
     "firebaseui": "^4.6.1",
     "mdbvue": "^6.7.1",
     "register-service-worker": "^1.7.1",
+    "uuid": "^8.3.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
