--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
     "vue2-google-maps": "^0.10.7",
+    "vuedraggable": "^2.24.1",
     "vuefire": "^2.2.4",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
