--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/uuid": "^8.3.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.15.0",
-    "firebase": "^7.18.0",
+    "firebase": "^7.19.0",
     "firebaseui": "^4.6.1",
     "mdbvue": "^6.7.1",
     "register-service-worker": "^1.7.1",
@@ -26,7 +26,8 @@
     "vuedraggable": "^2.24.1",
     "vuefire": "^2.2.4",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuexfire": "^3.2.4"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
