--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "nodemailer": "^6.4.11"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
