--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.15.0",
     "firebase": "^7.19.0",
+    "firebase-admin": "^9.1.1",
+    "firebase-functions": "^3.11.0",
     "firebaseui": "^4.6.1",
     "mdbvue": "^6.7.1",
     "register-service-worker": "^1.7.1",
