--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.15.0",
