--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "date-fns": "^2.15.0",
     "firebase": "^7.19.0",
